# grapegeek

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  QUEBEC_WINE_MAP_DESIGN.md  README_NEW_STRUCTURE.md  STRUCTURE.md  create_wine_map_data.py  cspell.json  dataset_statistics.txt  main.py  mkdocs.yml  normalize_grape_varieties.py  pyproject.toml  quebec_wine_producers.py  readme.md  sync_french.py  technical_documentation.md  test-server.py  test_web_search.py  validate_prompts.py
data/: 01_unified_producers.jsonl  01_unified_producers_metadata.json  05_wine_producers_final.jsonl  grape_variety_mapping.jsonl  grape_variety_mapping.yaml  producer_geolocations_cache.jsonl  quebec_sparkling_wines_detailed.jsonl  vivc_index.md  vivc_index_consolidated.md  wine_type_mapping.yaml
debug/: itasca_story_debug.md  itasca_technical_debug.md  quebec_region_debug.md
docs/: CNAME  about.md  ai-usage.md  grape-tree-viewer.html  index.md  quebec_sparkling_wines_catalog.html
grape-explorer-react/: .gitignore  README.md  TREE_INTEGRATION_PLAN.md  index.html  package-lock.json  package.json
grape-tree-react/: .gitignore  README.md  copy-data.js  index.html  package-lock.json  package.json  vite.config.js
grapegeek-nextjs/: CLAUDE.md  QUICKSTART.md  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-winemaker-pages.js  verify-setup.sh
infrastructure/: GCP.md  SETUP.md
normalization/: grape_varieties.py  normalize.py
output/: regions.md
photos_to_clean/: INTEGRATION_TEST_PLAN.md  PHOTO_PIPELINE_USAGE.md  README.md  (+10 more)
(+333 files in other folders)
